Install clang-3.9 & llvm-3.9
They are required to build firefox 60.

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -35,6 +35,8 @@
       with_items:
         - clang
         - llvm
+        - clang-3.9
+        - llvm-3.9
       become: yes
 
     - name: Install rust by rustup
