--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -39,6 +39,12 @@
         - llvm-3.9
       become: yes
 
+    - name: Install additional development tools
+      apt: name={{item}} update_cache=yes
+      with_items:
+        - emacs
+      become: yes
+
     - name: Install rust by rustup
       shell: curl https://sh.rustup.rs -sSf | sh -s -- -y
 
