Disable PACKAGECONFIG for firefox by default

--- a/provisioning/files/conf/local.conf
+++ b/provisioning/files/conf/local.conf
@@ -374,7 +374,7 @@ DISTRO_FEATURES_append = " wayland"
 
 IMAGE_INSTALL_append = " firefox "
 IMAGE_INSTALL_append = " ttf-sazanami-gothic ttf-sazanami-mincho "
-PACKAGECONFIG_append_pn-firefox = " egl openmax "
+#PACKAGECONFIG_append_pn-firefox = " stylo egl openmax "
 
 GCCVERSION_mine = "linaro-4.9"
 SDKGCCVERSION ?= "${GCCVERSION_mine}"
