Use meta-rust instead of rustup

--- a/provisioning/files/conf/bblayers.conf
+++ b/provisioning/files/conf/bblayers.conf
@@ -19,4 +19,5 @@ BBLAYERS_NON_REMOVABLE ?= " \
   "
 BBLAYERS += "${TOPDIR}/../meta-gecko-embedded/meta-poky-jethro"
 BBLAYERS += "${TOPDIR}/../meta-gecko-embedded/meta-demo"
+BBLAYERS += "${TOPDIR}/../meta-rust"
 BBLAYERS += "${TOPDIR}/../meta-browser"
