--- a/provisioning/files/conf/bblayers.conf
+++ b/provisioning/files/conf/bblayers.conf
@@ -1,23 +1,20 @@
-# LAYER_CONF_VERSION is increased each time build/conf/bblayers.conf
+# POKY_BBLAYERS_CONF_VERSION is increased each time build/conf/bblayers.conf
 # changes incompatibly
-LCONF_VERSION = "6"
+POKY_BBLAYERS_CONF_VERSION = "2"
 
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
   ${TOPDIR}/../poky/meta \
-  ${TOPDIR}/../poky/meta-yocto \
-  ${TOPDIR}/../meta-openembedded/meta-oe \  
+  ${TOPDIR}/../poky/meta-poky \
   ${TOPDIR}/../poky/meta-yocto-bsp \
-  ${TOPDIR}/../meta-renesas/meta-rzg1 \
+  ${TOPDIR}/../meta-renesas/meta-rcar-gen3 \
   ${TOPDIR}/../meta-linaro/meta-linaro-toolchain \
+  ${TOPDIR}/../meta-linaro/meta-optee \
+  ${TOPDIR}/../meta-openembedded/meta-oe \
   "
-BBLAYERS_NON_REMOVABLE ?= " \
-  ${TOPDIR}/../poky/meta \
-  ${TOPDIR}/../poky/meta-yocto \
-  "
-BBLAYERS += "${TOPDIR}/../meta-gecko-embedded/meta-poky-jethro"
-BBLAYERS += "${TOPDIR}/../meta-gecko-embedded/meta-demo"
-BBLAYERS += "${TOPDIR}/../meta-rust"
-BBLAYERS += "${TOPDIR}/../meta-browser"
+
+# BBLAYERS += " ${TOPDIR}/../meta-gecko-embedded/meta-poky-rust "
+BBLAYERS += " ${TOPDIR}/../meta-browser "
+BBLAYERS += " ${TOPDIR}/../meta-rust "
