--- a/provisioning/files/conf/local.conf
+++ b/provisioning/files/conf/local.conf
@@ -1,40 +1,15 @@
-#Mask linaro tc bb due to unnecessaries
-BBMASK ?= "external-linaro-toolchain|binutils_linaro.*"
-
 #
 # This file is your local configuration file and is where all local user settings
 # are placed. The comments in this file give some guide to the options a new user
 # to the system might want to change but pretty much any configuration option can
-# be set in this file. More adventurous users can look at local.conf.extended 
+# be set in this file. More adventurous users can look at local.conf.extended
 # which contains other examples of configuration which can be placed in this file
 # but new users likely won't need any of them initially.
 #
-# Lines starting with the '#' character are commented out and in some cases the 
+# Lines starting with the '#' character are commented out and in some cases the
 # default values are provided as comments to show people example syntax. Enabling
 # the option is a question of removing the # character and making any change to the
 # variable as required.
-
-#
-# Parallelism Options
-#
-# These two options control how much parallelism BitBake should use. The first 
-# option determines how many tasks bitbake should run in parallel:
-#
-# BB_NUMBER_THREADS ?= "4"
-#
-# Default to setting automatically based on cpu count
-BB_NUMBER_THREADS ?= "${@oe.utils.cpu_count()}"
-# 
-# The second option controls how many processes make should run in parallel when
-# running compile tasks:
-#
-# PARALLEL_MAKE ?= "-j 4"
-#
-# Default to setting automatically based on cpu count
-PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
-#
-# For a quad-core machine, BB_NUMBER_THREADS = "4", PARALLEL_MAKE = "-j 4" would
-# be appropriate for example.
 
 #
 # Machine Selection
@@ -43,7 +18,9 @@ PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 # of emulated machines available which can boot and run in the QEMU emulator:
 #
 #MACHINE ?= "qemuarm"
+#MACHINE ?= "qemuarm64"
 #MACHINE ?= "qemumips"
+#MACHINE ?= "qemumips64"
 #MACHINE ?= "qemuppc"
 #MACHINE ?= "qemux86"
 #MACHINE ?= "qemux86-64"
@@ -58,7 +35,7 @@ PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 #MACHINE ?= "edgerouter"
 #
 # This sets the default machine to be qemux86 if no other machine is selected:
-MACHINE ??= "iwg20m"
+MACHINE ??= "m3ulcb"
 
 #
 # Where to place downloads
@@ -119,8 +96,8 @@ DISTRO ?= "poky"
 #
 # Package Management configuration
 #
-# This variable lists which packaging formats to enable. Multiple package backends 
-# can be enabled at once and the first item listed in the variable will be used 
+# This variable lists which packaging formats to enable. Multiple package backends
+# can be enabled at once and the first item listed in the variable will be used
 # to generate the root filesystems.
 # Options are:
 #  - 'package_deb' for debian style deb files
@@ -128,13 +105,13 @@ DISTRO ?= "poky"
 #  - 'package_rpm' for rpm style packages
 # E.g.: PACKAGE_CLASSES ?= "package_rpm package_deb package_ipk"
 # We default to rpm:
-PACKAGE_CLASSES ?= "package_ipk"
+PACKAGE_CLASSES ?= "package_rpm"
 
 #
-# SDK/ADT target architecture
+# SDK target architecture
 #
-# This variable specifies the architecture to build SDK/ADT items for and means
-# you can build the SDK packages for architectures other than the machine you are 
+# This variable specifies the architecture to build SDK items for and means
+# you can build the SDK packages for architectures other than the machine you are
 # running the build on (i.e. building i686 packages on an x86_64 host).
 # Supported values are i686 and x86_64
 #SDKMACHINE ?= "i686"
@@ -142,7 +119,7 @@ PACKAGE_CLASSES ?= "package_ipk"
 #
 # Extra image configuration defaults
 #
-# The EXTRA_IMAGE_FEATURES variable allows extra packages to be added to the generated 
+# The EXTRA_IMAGE_FEATURES variable allows extra packages to be added to the generated
 # images. Some of these options are added to certain image types automatically. The
 # variable can contain the following options:
 #  "dbg-pkgs"       - add -dbg packages for all installed packages
@@ -154,25 +131,24 @@ PACKAGE_CLASSES ?= "package_ipk"
 #  "tools-sdk"      - add development tools (gcc, make, pkgconfig etc.)
 #  "tools-debug"    - add debugging tools (gdb, strace)
 #  "eclipse-debug"  - add Eclipse remote debugging support
-#  "tools-profile"  - add profiling tools (oprofile, exmap, lttng, valgrind)
+#  "tools-profile"  - add profiling tools (oprofile, lttng, valgrind)
 #  "tools-testapps" - add useful testing tools (ts_print, aplay, arecord etc.)
 #  "debug-tweaks"   - make an image suitable for development
 #                     e.g. ssh root access has a blank password
 # There are other application targets that can be used here too, see
 # meta/classes/image.bbclass and meta/classes/core-image.bbclass for more details.
 # We default to enabling the debugging tweaks.
-EXTRA_IMAGE_FEATURES = "debug-tweaks"
+EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 
 #
 # Additional image features
 #
 # The following is a list of additional classes to use when building images which
-# enable extra features. Some available options which can be included in this variable 
+# enable extra features. Some available options which can be included in this variable
 # are:
 #   - 'buildstats' collect build statistics
 #   - 'image-mklibs' to reduce shared library files size for an image
 #   - 'image-prelink' in order to prelink the filesystem image
-#   - 'image-swab' to perform host system intrusion detection
 # NOTE: if listing mklibs & prelink both, then make sure mklibs is before prelink
 # NOTE: mklibs also needs to be explicitly enabled for a given image, see local.conf.extended
 USER_CLASSES ?= "buildstats image-mklibs image-prelink"
@@ -188,8 +164,8 @@ USER_CLASSES ?= "buildstats image-mklibs image-prelink"
 #
 # Interactive shell configuration
 #
-# Under certain circumstances the system may need input from you and to do this it 
-# can launch an interactive shell. It needs to do this since the build is 
+# Under certain circumstances the system may need input from you and to do this it
+# can launch an interactive shell. It needs to do this since the build is
 # multithreaded and needs to be able to handle the case where more than one parallel
 # process may require the user's attention. The default is iterate over the available
 # terminal types to find one that works.
@@ -212,24 +188,28 @@ PATCHRESOLVE = "noop"
 # shutdown the build. If there is less that 100MB or 1K inodes, perform a hard abort
 # of the build. The reason for this is that running completely out of space can corrupt
 # files and damages the build in ways which may not be easily recoverable.
-BB_DISKMON_DIRS = "\
+# It's necesary to monitor /tmp, if there is no space left the build will fail
+# with very exotic errors.
+BB_DISKMON_DIRS ??= "\
     STOPTASKS,${TMPDIR},1G,100K \
     STOPTASKS,${DL_DIR},1G,100K \
     STOPTASKS,${SSTATE_DIR},1G,100K \
+    STOPTASKS,/tmp,100M,100K \
     ABORT,${TMPDIR},100M,1K \
     ABORT,${DL_DIR},100M,1K \
-    ABORT,${SSTATE_DIR},100M,1K" 
+    ABORT,${SSTATE_DIR},100M,1K \
+    ABORT,/tmp,10M,1K"
 
 #
 # Shared-state files from other locations
 #
-# As mentioned above, shared state files are prebuilt cache data objects which can 
+# As mentioned above, shared state files are prebuilt cache data objects which can
 # used to accelerate build time. This variable can be used to configure the system
 # to search other mirror locations for these objects before it builds the data itself.
 #
 # This can be a filesystem directory, or a remote url such as http or ftp. These
-# would contain the sstate-cache results from previous builds (possibly from other 
-# machines). This variable works like fetcher MIRRORS/PREMIRRORS and points to the 
+# would contain the sstate-cache results from previous builds (possibly from other
+# machines). This variable works like fetcher MIRRORS/PREMIRRORS and points to the
 # cache locations to check for the shared objects.
 # NOTE: if the mirror uses the same structure as SSTATE_DIR, you need to add PATH
 # at the end as shown in the examples below. This will be substituted with the
@@ -238,71 +218,43 @@ BB_DISKMON_DIRS = "\
 #file://.* http://someserver.tld/share/sstate/PATH;downloadfilename=PATH \n \
 #file://.* file:///some/local/dir/sstate/PATH"
 
+
 #
 # Qemu configuration
 #
 # By default qemu will build with a builtin VNC server where graphical output can be
-# seen. The two lines below enable the SDL backend too. This assumes there is a
-# libsdl library available on your build system.
-PACKAGECONFIG_pn-qemu-native = "sdl"
-PACKAGECONFIG_pn-nativesdk-qemu = "sdl"
-ASSUME_PROVIDED += "libsdl-native"
+# seen. The two lines below enable the SDL backend too. By default libsdl-native will
+# be built, if you want to use your host's libSDL instead of the minimal libsdl built
+# by libsdl-native then uncomment the ASSUME_PROVIDED line below.
+PACKAGECONFIG_append_pn-qemu-native = " sdl"
+PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
+#ASSUME_PROVIDED += "libsdl-native"
 
 # CONF_VERSION is increased each time build/conf/ changes incompatibly and is used to
 # track the version of this file when it was generated. This can safely be ignored if
 # this doesn't mean anything to you.
 CONF_VERSION = "1"
 
-LICENSE_FLAGS_WHITELIST = "commercial"
+# Add systemd configuration
+DISTRO_FEATURES_append = " systemd"
+VIRTUAL-RUNTIME_init_manager = "systemd"
 
-# Define the name of multimedia, dtv, graphic test, multimedia-test for bbmask
-BB_MULTIMEDIA_KERNEL_MODULE = "kernel-module-fdpm|kernel-module-mmngr|\
-                               kernel-module-mmngrbuf|kernel-module-s3ctl|\
-							   kernel-module-uvcs|kernel-module-vspm"
-BB_MULTIMEDIA_USER_MODULE = "fdpm-user-module|mmngr-user-module|\
-                             mmngrbuf-user-module|omx-user-module|\
-							 s3ctl-user-module|vspm-user-module|libmemcpy"
-BB_MULTIMEDIA_TEST_MODULE = "fdpm-tp-user-module|mmngr-tp-user-module|\
-                             mmngrbuf-tp-user-module|s3ctl-tp-user-module|\
-							 vspm-tp-user-module"
-BB_GST_PLUGINS = "meta-renesas/meta-rzg1/recipes-multimedia/gstreamer"
-MULTIMEDIA_BB = "${BB_MULTIMEDIA_KERNEL_MODULE}|${BB_MULTIMEDIA_USER_MODULE}|\
-                 ${BB_MULTIMEDIA_TEST_MODULE}|${BB_GST_PLUGINS}"
+# Linaro GCC
+GCCVERSION = "linaro-7.2"
 
-# Enable Multimedia standard pkg
-MACHINE_FEATURES_append = " multimedia"
-
-# UnMask the multimedia kernel modules
-#BBMASK .= "|${BB_MULTIMEDIA_KERNEL_MODULE}"
-
-# UnMask the multimedia user modules
-#BBMASK .= "|${BB_MULTIMEDIA_USER_MODULE}"
-
-# Include static library in SDK
+# add the static lib to SDK toolchain
 SDKIMAGE_FEATURES_append = " staticdev-pkgs"
 
-# Mask the DTV pkgs
-#MACHINE_FEATURES_append = " dtv"
-BBMASK .= "|dtv-module|ssp-module|scu-module"
-
-# Enable graphic pkgs
-#BBMASK .= "|gles-kernel-module|gles-user-module"
-
-# Mask the multimedia-test
-BBMASK .= "|${BB_MULTIMEDIA_TEST_MODULE}"
-
-# Mask the graphic test
-BBMASK .= "|gles-test-module"
-
-#DISTRO_FEATURES_append = " mm-test"
-#DISTRO_FEATURES_append = " gles-test"
+# Disable optee in meta-linaro layer
+BBMASK = "meta-linaro/meta-optee/recipes-security/optee"
 
 # Enable Gfx Pkgs
-MACHINE_FEATURES_append = " sgx"
+MACHINE_FEATURES_append = " gsx"
 MULTI_PROVIDER_WHITELIST += "virtual/libgl virtual/egl virtual/libgles1 virtual/libgles2"
 
 # for Wayland/Weston
-
+DISTRO_FEATURES_NATIVESDK_append = " wayland"
+DISTRO_FEATURES_append = " pam"
 PREFERRED_PROVIDER_virtual/libgles1 = ""
 PREFERRED_PROVIDER_virtual/libgles2 = "gles-user-module"
 PREFERRED_PROVIDER_virtual/egl = "libegl"
@@ -310,79 +262,128 @@ PREFERRED_PROVIDER_virtual/libgl = ""
 PREFERRED_PROVIDER_virtual/mesa = ""
 PREFERRED_PROVIDER_libgbm = "libgbm"
 PREFERRED_PROVIDER_libgbm-dev = "libgbm"
-
-# Setting for u-boot Wayland
-UBOOT_MACHINE = "iwg20m_q7_config"
-
-# Addtional Configurations of Optional OMX modules
-
-# OMX Media Component H263 Decoder Library
-#DISTRO_FEATURES_append = " h263dec_lib"
-# OMX Media Component VC-1 Decoder Library
-#DISTRO_FEATURES_append = " vc1dec_lib"
-# OMX Media Component MPEG-4 Decoder Library
-#DISTRO_FEATURES_append = " mpeg4dec_lib"
-# VCP3 Driver Adapted for Linux MPEG-2 Decoder Library
-#DISTRO_FEATURES_append = " mpeg2dec_lib"
-# DivX Decoder Library for Linux
-#DISTRO_FEATURES_append = " divxdec_lib"
-# Encoder Library for Linux
-DISTRO_FEATURES_append = " h264avcenc_lib"
-
-# Configurations of Optional Audio Decoders
-# ARM 5.1ch aacPlus V2 Decoder for Linux
-#DISTRO_FEATURES_append = " aacp2dec_lib"
-# ARM MP3 Decoder for Linux
-#DISTRO_FEATURES_append = " mp3dec_lib"
-# ARM WMA Decoder for Linux
-#DISTRO_FEATURES_append = " wmadec_lib"
-# ARM 5.1ch Dolby Digital Decoder for Linux
-#DISTRO_FEATURES_append = " ddddec_lib"
-# ARM ALAC Decoder for Linux
-#DISTRO_FEATURES_append = " alacdec_lib"
-# ARM FLAC Decoder for Linux
-#DISTRO_FEATURES_append = " flacdec_lib"
-# ARM AAC-LC Decoder Library Sample for Linux
-#DISTRO_FEATURES_append = " aaclcsdec_lib"
-# ARM AAC Encoder for Linux
-#DISTRO_FEATURES_append = " aacenc_lib"
-
-# Configurations of Optional Audio Middlewares
-# ARM 5.1ch aacPlus V2 Decode Middleware for Linux
-#DISTRO_FEATURES_append = " armaccp2dec_mdw"
-# ARM MP3 Decode Middleware for Linux
-#DISTRO_FEATURES_append = " mp3dec_mdw"
-# ARM WMA Decode Middleware for Linux
-#DISTRO_FEATURES_append = " wmadec_mdw"
-# ARM 5.1ch Dolby Digital Decode Middleware for Linux
-#DISTRO_FEATURES_append = " ddddec_mdw"
-# ARM ALAC Decode Middleware for Linux
-#DISTRO_FEATURES_append = " alacdec_mdw"
-# ARM FLAC Decode Middleware for Linux
-#DISTRO_FEATURES_append = " flacdec_mdw"
-# ARM AAC Decode Middleware Sample for Linux
-#DISTRO_FEATURES_append = " aacsdec_mdw"
-# ARM AAC Encode Middleware for Linux
-#DISTRO_FEATURES_append = " aacenc_mdw"
-
-# Choose graphic environment:
-DISTRO_FEATURES_append = "x11"
-DISTRO_FEATURES_append = " wayland"
-
-####    temperary  #########
-#MACHINE_FEATURES_remove = " multimedia"
-
+BBMASK .= "|mesa-gl"
 IMAGE_INSTALL_append = " firefox "
 IMAGE_INSTALL_append = " ttf-sazanami-gothic ttf-sazanami-mincho "
-#PACKAGECONFIG_append_pn-firefox = " stylo egl openmax "
+PACKAGECONFIG_append_pn-firefox = " egl "
+PACKAGECONFIG_append_pn-firefox = " openmax "
+PACKAGECONFIG_append_pn-firefox = " webgl "
+PACKAGECONFIG_append_pn-firefox = " canvas-gpu "
 
-GCCVERSION_mine = "linaro-4.9"
-SDKGCCVERSION ?= "${GCCVERSION_mine}"
-PREFERRED_VERSION_gcc ?= "${GCCVERSION_mine}"
-PREFERRED_VERSION_libgcc-initial="${GCCVERSION_mine}"
-PREFERRED_VERSION_gcc-cross-${TARGET_ARCH} ?= "${GCCVERSION_mine}"
-PREFERRED_VERSION_gcc-cross-initial-${TARGET_ARCH} ?= "${GCCVERSION_mine}"
-PREFERRED_VERSION_gcc-cross-canadian-${TRANSLATED_TARGET_ARCH} ?= "${GCCVERSION_mine}"
-PREFERRED_VERSION_gcc-runtime ?= "${GCCVERSION_mine}"
-PREFERRED_VERSION_gcc-sanitizers ?= "${GCCVERSION_mine}"
-PREFERRED_VERSION_libgcc ?= "${GCCVERSION_mine}"
+HOSTTOOLS += "unzip autoconf2.13"
+
+# Enable Multimedia features
+MACHINE_FEATURES_append = " multimedia"
+
+# for gstreamer omx plugins
+LICENSE_FLAGS_WHITELIST = "commercial"
+# for mmp test program
+DISTRO_FEATURES_append = " mm-test"
+
+# for weston v4l2 renderer
+#DISTRO_FEATURES_append = " v4l2-renderer"
+
+# OMX H263 decoder library for Linux (RTM0AC0000XV263D30SL41C)
+#DISTRO_FEATURES_append = " h263dec_lib"
+
+# OMX H264 decoder library for Linux (RTM0AC0000XV264D30SL41C)
+DISTRO_FEATURES_append = " h264dec_lib"
+
+# OMX H264 encoder library for Linux (RTM0AC0000XV264E30SL41C)
+#DISTRO_FEATURES_append = " h264enc_lib"
+
+# OMX H265 decoder library for Linux (RTM0AC0000XV265D30SL41C)
+#DISTRO_FEATURES_append = " h265dec_lib"
+
+# OMX MPEG2 decoder library for Linux (RTM0AC0000XVM2VD30SL41C)
+#DISTRO_FEATURES_append = " mpeg2dec_lib"
+
+# OMX Media Component MPEG4 Decoder Library for Linux (RTM0AC0000XVM4VD30SL41C)
+#DISTRO_FEATURES_append = " mpeg4dec_lib"
+
+# OMX Media Component VC-1 Decoder Library for Linux (RTM0AC0000XVVC1D30SL41C)
+#DISTRO_FEATURES_append = " vc1dec_lib"
+
+# OMX Media Component DivXD Decoder Library for Linux (RTM0AC0000XVDVXD30SL41C)
+#DISTRO_FEATURES_append = " divxdec_lib"
+
+# OMX Media Component RealVideo Decoder Library for Linux (RTM0AC0000XVRLVD30SL41C)
+#DISTRO_FEATURES_append = " rvdec_lib"
+
+# OMX Media Component ALAC Decoder Library for Linux (RTM0AC0000XAALAD30SL41C)
+#DISTRO_FEATURES_append = " alacdec_lib"
+
+# OMX Media Component FLAC Decoder Library for Linux (RTM0AC0000XAFLAD30SL41C)
+#DISTRO_FEATURES_append = " flacdec_lib"
+
+# OMX AAC-LC decoder library for Linux (RTM0AC0000XAAACD30SL41C),
+# AAC-LC 2ch decoder middleware library for Linux (RTM0AC0000ADAACMZ1SL41C)
+DISTRO_FEATURES_append = " aaclcdec_lib"
+DISTRO_FEATURES_append = " aaclcdec_mdw"
+
+# OMX aacPlus V2 decoder library for Linux (RTM0AC0000XAAAPD30SL41C),
+# aacPlus V2 decoder middleware library for Linux (RTM0AC0000ADAAPMZ1SL41C)
+#DISTRO_FEATURES_append = " aacpv2dec_lib"
+#DISTRO_FEATURES_append = " aacpv2dec_mdw"
+
+# OMX MP3 decoder library for Linux (RTM0AC0000XAMP3D30SL41C),
+# MP3 decoder middleware library for Linux (RTM0AC0000ADMP3MZ1SL41C)
+#DISTRO_FEATURES_append = " mp3dec_lib"
+#DISTRO_FEATURES_append = " mp3dec_mdw"
+
+# OMX WMA decoder library for Linux (RTM0AC0000XAWMAD30SL41C),
+# WMA decoder middleware library for Linux (RTM0AC0000ADWMAMZ1SL41C)
+#DISTRO_FEATURES_append = " wmadec_lib"
+#DISTRO_FEATURES_append = " wmadec_mdw"
+
+# OMX AAC-LC encoder library for Linux (RTM0AC0000XAAACE30SL41C)
+# AAC-LC encoder middleware library for Linux (RTM0AC0000AEAACMZ1SL41C)
+#DISTRO_FEATURES_append = " aaclcenc_lib"
+#DISTRO_FEATURES_append = " aaclcenc_mdw"
+
+# OMX Dolby(R) Digital decoder library for Linux (RTM0AC0000XADD5D30SL41C),
+# Dolby(R) Digital decoder middleware library for Linux (RTM0AC0000ADDD5MZ1SL41C)
+#DISTRO_FEATURES_append = " dddec_lib"
+#DISTRO_FEATURES_append = " dddec_mdw"
+
+# OMX Media Component VP8 Decoder Library for Linux (RTM0AC0000XVVP8D30SL41C)
+#DISTRO_FEATURES_append = " vp8dec_lib"
+
+# OMX Media Component VP8 Encoder Library for Linux (RTM0AC0000XVVP8E30SL41C)
+#DISTRO_FEATURES_append = " vp8enc_lib"
+
+# CMS Basic Color Management Middleware for Linux (RTM0AC0000JRCMBCV0SL41C)
+#DISTRO_FEATURES_append = " cmsbcm"
+
+# CMS CMM3 Backlight Control Middleware for Linux (RTM0AC0000JRCMBLC0SL41C)
+#DISTRO_FEATURES_append = " cmsblc"
+
+# CMS VSP2 Dynamic Gamma Correction Middleware for Linux (RTM0AC0000JRCMDGV0SL41C)
+#DISTRO_FEATURES_append = " cmsdgc"
+
+# ISDB-T DTV Software Package for Linux (RTM0RC0000TE020000SL41C)
+#DISTRO_FEATURES_append = " dtv"
+
+# DVD Core-Middleware for Linux (RTM0RC0000XDVDC301SL41C)
+#DISTRO_FEATURES_append = " dvd"
+
+# ADSP Driver for Linux (RCG3AHPDL4101ZDO)
+# ADSP Interface for Linux (RCG3AHIFL4101ZDP)
+# ADSP Framework (RCG3AHFWN0201ZDP)
+#DISTRO_FEATURES_append = " adsp"
+
+# AVB Software Package for Linux
+#DISTRO_FEATURES_append = " avb"
+
+# Linux ICCOM driver (RCG3ZLIDL4101ZNO)
+# Linux ICCOM library (RCG3ZLILL4101ZNO)
+#DISTRO_FEATURES_append = " iccom"
+
+# Evaluation packages
+DISTRO_FEATURES_append = " use_eva_pkg"
+
+# Configuration for ivi-shell and ivi-extension
+#DISTRO_FEATURES_append = " ivi-shell"
+
+# Add Capacity Aware migration Strategy (CAS)
+MACHINE_FEATURES_append = " cas"
