bblayers.conf: Add a missing layer to build firefox-60esr

--- a/provisioning/files/conf/bblayers.conf
+++ b/provisioning/files/conf/bblayers.conf
@@ -18,6 +18,7 @@ BBLAYERS_NON_REMOVABLE ?= " \
   ${TOPDIR}/../poky/meta-yocto \
   "
 BBLAYERS += "${TOPDIR}/../meta-gecko-embedded/meta-poky-jethro"
+BBLAYERS += "${TOPDIR}/../meta-gecko-embedded/meta-poky-rust"
 BBLAYERS += "${TOPDIR}/../meta-gecko-embedded/meta-demo"
 BBLAYERS += "${TOPDIR}/../meta-rust"
 BBLAYERS += "${TOPDIR}/../meta-browser"
